httpd-fargate-nlb-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-ns
  labels:
    aws-observability: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  namespace: demo-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: demo-ns
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: httpd
  type: NodePort  # required even on Fargate for ALB/NLB to target pod IPs
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  namespace: demo-ns
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-type: nlb
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd-service
            port:
              number: 80
